[package]
name = "advent_of_code_2022"
version = "0.1.0"
authors = ["Sebastian Jegerås <jegeras@gmail.com>"]
edition = "2021"

[dependencies]
itertools = "0.10.3"
regex = "^0"
image = "^0"
rand = "^0.7"


[dev-dependencies]
criterion = "0.3"

[[bin]]
name = "day01"
path = "day01/day01.rs"

[[bin]]
name = "day02"
path = "day02/day02.rs"

[[bin]]
name = "day03"
path = "day03/day03.rs"

[[bin]]
name = "day04"
path = "day04/day04.rs"

[[bin]]
name = "day05"
path = "day05/day05.rs"

[[bin]]
name = "day06"
path = "day06/day06.rs"

[[bin]]
name = "day07"
path = "day07/day07.rs"

[[bin]]
name = "day08"
path = "day08/day08.rs"

[[bin]]
name = "day09"
path = "day09/day09.rs"

[[bin]]
name = "day10"
path = "day10/day10.rs"

[[bin]]
name = "day11"
path = "day11/day11.rs"

[[bin]]
name = "day12"
path = "day12/day12.rs"

[[bin]]
name = "day13"
path = "day13/day13.rs"

[[bin]]
name = "day14"
path = "day14/day14.rs"

[[bin]]
name = "day15"
path = "day15/day15.rs"

[[bin]]
name = "day16"
path = "day16/day16.rs"

[[bin]]
name = "day17"
path = "day17/day17.rs"

[[bin]]
name = "day18"
path = "day18/day18.rs"

[[bin]]
name = "day19"
path = "day19/day19.rs"

[[bin]]
name = "day20"
path = "day20/day20.rs"

[[bin]]
name = "day21"
path = "day21/day21.rs"

[[bin]]
name = "day22"
path = "day22/day22.rs"

[[bin]]
name = "day23"
path = "day23/day23.rs"

[[bin]]
name = "day24"
path = "day24/day24.rs"

[[bin]]
name = "day25"
path = "day25/day25.rs"
